--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/glassfish4/javadb/lib/derby.jar"/>
-	<classpathentry kind="lib" path="C:/glassfish4/javadb/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="G:/School Stuff/Term 6/Java/glassfish4/javadb/lib/derby.jar"/>
+	<classpathentry kind="lib" path="G:/School Stuff/Term 6/Java/glassfish4/javadb/lib/derbyclient.jar"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.glassfish.lib.system">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
