--- a/.classpath
+++ b/.classpath
@@ -3,14 +3,15 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="G:/School Stuff/Term 6/Java/glassfish4/javadb/lib/derby.jar"/>
-	<classpathentry kind="lib" path="G:/School Stuff/Term 6/Java/glassfish4/javadb/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="D:/Program Files (x86)/glassfish4/javadb/lib/derby.jar"/>
+	<classpathentry kind="lib" path="D:/Program Files (x86)/glassfish4/javadb/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="D:/Program Files (x86)/apache-tomcat-8.0.35/lib/servlet-api.jar" sourcepath="src"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.glassfish.lib.system">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_45">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_92">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
